# termite

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
termite/: __main__.py  evaluate_script.py  execute_script.py  generate_script.py  prompts.py  run_agent.py  run_llm.py  run_pipeline.py  run_pt.py  termite.py
termite/dtos/: Config.py  Script.py  __init__.py
termite/shared/: __init__.py  call_llm.py  run_tui.py
termite/shared/utils/: __init__.py  fix_imports.py  python_exe.py  run_pty.py
termite/tools/: __init__.py  build_tui.py  design_tui.py  fix_errors.py  refine.py
